Completed Code Along and made my Personal Independent Bio

--- a/code-solo.html
+++ b/code-solo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- 1. Change the title to My Practice Page or a title you think is better - your pick. -->
-    <title>Code Solo</title>
+    <title>Independent Practice Page</title>
 </head>
 <body>
     <!-- nav bar -->
@@ -14,16 +14,32 @@
 
     
     <!-- 2. Add the biggest header tag and make the content your name. -->
+  <h1>Korben Schrader!</h1>
 
     <!-- 3. Add another header tag, but make it smaller. Make the content say "Bio" (do not include the quotes)-->
-
+  <h2>Bio</h2>
+  
     <!-- 4. Add a paragraph tag. For the content, write 6 short sentences about yourself. -->
+<p>My name is Korben Schrader, a name my dad came up with after wacthing "The Fifth Element" and naming me after "Corben Dallas". I've traveled all over the world both for enjoyment and to live in for a big portion of my life. I was bornon July 15th, 2006 in Brooklyn, New York, only to stay there for 2 years and move to Bogota, Colombia shortly there after. I lived there for 6 years before moving to Miami, Florida and staying there for another 6 years before finally migrating back to New York after 14 years to live in Queens.
+<br>  
+For enjoyment, I've traveled to Texas, Poland, Germany, and all over the country of Colombia with my dad and my sister. When i grow up I want to pursue a carrer in Computer Science, more sepcifically my passion is programming and creating new products that were made straightly from my mind, but any sector in the Computer Science field will leave me incredibly satisfied and proud with what I am able to achieve.</p>
 
     <!-- 5. After the third sentence in your bio, add a break tag. -->
 
     <!-- Challenge: go to this link in your browser: https://www.w3schools.com/tags/ref_byfunc.asp 
         and try adding an unordered list. Include a couple list items of things you like. -->
-
+<h2>Favorite Things:</h2>
+  <dl>
+  <dt>Video Games</dt>
+    <dd>- Puzzles, RPGs, Shooters</dd>
+  <dt>Activities</dt>
+    <dd>- Reading, Coding, Spenidng Time with Family</dd>
+  <dt>Food</dt>
+    <dd>- Bandeja Paisa, Pizza, Burgers</dd>
+  <dt>Music</dt>
+    <dd>- Electro, Pop, Synth</dd>
+</dl>
+  
 </body>
 
 
